crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_host_capability_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_invoke_tool(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_knowledge_entries(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peer_host_capability_manifests(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peers(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_rules(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_timeline_events(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_findings(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_register_peer(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_unregister_peer(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_close(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_get_host_capability_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_get_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_get_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_invoke_tool(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_knowledge_entries(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_peer_host_capability_manifests(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_rules(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_timeline_events(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_findings(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_register_tool_handler(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_remote_peer_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_session_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_state(void
    
);
uint16_t uniffi_spoke_connect_checksum_constructor_inboundsequence_new(void
    
);